public/style.css
@import "tailwindcss";
@plugin "daisyui";

/* Restore popover hidden state that Tailwind's preflight overrides */
[popover]:not(:popover-open) {
  display: none;
}

/* Hide popovers until positioned by JS to prevent flash */
[popover]:popover-open {
  visibility: hidden;
}

[popover].positioned {
  visibility: visible;
}

/* Prevent layout shift when popovers/modals set overflow:hidden on body */
html {
  scrollbar-gutter: stable;
}

/* Icon classes using mask-image to inherit currentColor */
.icon {
  display: inline-block;
  width: 1.5rem;
  height: 1.5rem;
  background-color: currentColor;
  mask-size: contain;
  mask-repeat: no-repeat;
  mask-position: center;
  -webkit-mask-size: contain;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  vertical-align: middle;
}

.icon-globe {
  mask-image: url('/icons/globe-alt.svg');
  -webkit-mask-image: url('/icons/globe-alt.svg');
}


.icon-warning {
  mask-image: url('/icons/exclamation-triangle.svg');
  -webkit-mask-image: url('/icons/exclamation-triangle.svg');
}

.icon-undo {
  mask-image: url('/icons/arrow-uturn-left.svg');
  -webkit-mask-image: url('/icons/arrow-uturn-left.svg');
}

.icon-redo {
  mask-image: url('/icons/arrow-uturn-right.svg');
  -webkit-mask-image: url('/icons/arrow-uturn-right.svg');
}

.icon-jump {
  mask-image: url('/icons/bookmark-solid.svg');
  -webkit-mask-image: url('/icons/bookmark-solid.svg');
}

.icon-children {
  mask-image: url('/icons/command-line-solid.svg');
  -webkit-mask-image: url('/icons/command-line-solid.svg');
}

.icon-dots-vertical {
  mask-image: url('/icons/ellipsis-vertical-solid.svg');
  -webkit-mask-image: url('/icons/ellipsis-vertical-solid.svg');
}

.icon-save {
  mask-image: url('/icons/folder-arrow-down-solid.svg');
  -webkit-mask-image: url('/icons/folder-arrow-down-solid.svg');
}

.icon-play {
  mask-image: url('/icons/play-solid.svg');
  -webkit-mask-image: url('/icons/play-solid.svg');
}

.icon-quit {
  mask-image: url('/icons/x-circle-solid.svg');
  -webkit-mask-image: url('/icons/x-circle-solid.svg');
}

.icon-lock {
  mask-image: url('/icons/lock-closed-solid.svg');
  -webkit-mask-image: url('/icons/lock-closed-solid.svg');
}

.icon-arrow-up {
  mask-image: url('/icons/arrow-up-solid.svg');
  -webkit-mask-image: url('/icons/arrow-up-solid.svg');
}

.icon-scroll-top {
  mask-image: url('/icons/chevron-double-up-solid.svg');
  -webkit-mask-image: url('/icons/chevron-double-up-solid.svg');
}

.icon-scroll-bottom {
  mask-image: url('/icons/chevron-double-down-solid.svg');
  -webkit-mask-image: url('/icons/chevron-double-down-solid.svg');
}

.icon-arrow-down {
  mask-image: url('/icons/arrow-down-solid.svg');
  -webkit-mask-image: url('/icons/arrow-down-solid.svg');
}

.icon-arrow-right {
  mask-image: url('/icons/arrow-right-solid.svg');
  -webkit-mask-image: url('/icons/arrow-right-solid.svg');
}

.icon-bless {
  mask-image: url('/icons/check-circle-solid.svg');
  -webkit-mask-image: url('/icons/check-circle-solid.svg');
}

.icon-bless-to {
  mask-image: url('/icons/check-badge-solid.svg');
  -webkit-mask-image: url('/icons/check-badge-solid.svg');
}

.icon-add {
  mask-image: url('/icons/plus-circle-solid.svg');
  -webkit-mask-image: url('/icons/plus-circle-solid.svg');
}

.icon-edit {
  mask-image: url('/icons/pencil-solid.svg');
  -webkit-mask-image: url('/icons/pencil-solid.svg');
}

.icon-label {
  mask-image: url('/icons/tag-solid.svg');
  -webkit-mask-image: url('/icons/tag-solid.svg');
}

.icon-insert {
  mask-image: url('/icons/arrow-up-on-square-stack-solid.svg');
  -webkit-mask-image: url('/icons/arrow-up-on-square-stack-solid.svg');
}

.icon-delete {
  mask-image: url('/icons/trash-solid.svg');
  -webkit-mask-image: url('/icons/trash-solid.svg');
}

.icon-splice {
  mask-image: url('/icons/scissors-solid.svg');
  -webkit-mask-image: url('/icons/scissors-solid.svg');
}

.icon-dynamic {
  mask-image: url('/icons/cpu-chip-solid.svg');
  -webkit-mask-image: url('/icons/cpu-chip-solid.svg');
}

.icon-trace {
  mask-image: url('/icons/bug-ant-solid.svg');
  -webkit-mask-image: url('/icons/bug-ant-solid.svg');
}

/* ANSI SGR styling classes for blessed output */
.ansi-bold {
  font-weight: bold;
}

.ansi-italic {
  font-style: italic;
}

.ansi-underline {
  text-decoration: underline;
}

.ansi-black {
  color: #1a1a1a;
}

.ansi-red {
  color: #cc0000;
}

.ansi-green {
  color: #00aa00;
}

.ansi-yellow {
  color: #aa8800;
}

.ansi-blue {
  color: #0000cc;
}

.ansi-magenta {
  color: #aa00aa;
}

.ansi-cyan {
  color: #00aaaa;
}

.ansi-white {
  color: #aaaaaa;
}

/* Dialog source syntax highlighting classes */
.dg-comment {
  color: #6b7280;
  font-style: italic;
}

.dg-keyword {
  color: #7c3aed;
  font-weight: 600;
}

.dg-object {
  color: #0d9488;
}

.dg-variable {
  color: #d97706;
}

.dg-number {
  color: #9333ea;
}

.dg-dict-word {
  color: #16a34a;
}

.dg-predicate {
  color: #2563eb;
}

.dg-heading {
  color: #1e40af;
  font-weight: 700;
}

.dg-escape {
  color: #ea580c;
}

.dg-punctuation {
  color: #6b7280;
}

.dg-error {
  color: #dc2626;
  text-decoration: wavy underline;
}

